# st-how-much

./: pyproject.toml
iphone_eare/test/: data_valid.py
iphone_eare/train_local/: train.py
